--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-loader": "^1.1.11",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-motion-drawer": "^3.0.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
