--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-motion-drawer": "^3.0.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
